--- a/markdown.css
+++ b/markdown.css
@@ -13,7 +13,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 32px;
     margin: 0 0 45px;
-    letter-spacing: 1px;
 }
 h2 {
     position: relative;
@@ -24,9 +23,10 @@ h3 {
     font-size: 1.17em;
     margin: 30px 0 15px;
 }
-h2:before {
+h2::before {
     content: '';
-    border-left: 5px solid #f66;
+    width: 5px;
+    background: #f66;
     position: absolute;
     left: 0px;
     height: 75%;
