--- a/markdown.css
+++ b/markdown.css
@@ -23,7 +23,7 @@ h3 {
     font-size: 1.17em;
     margin: 30px 0 15px;
 }
-h2::before {
+h2:before {
     content: '';
     width: 5px;
     background: #f66;
