--- a/markdown.css
+++ b/markdown.css
@@ -21,7 +21,10 @@ h2 {
 }
 h3 {
     font-size: 1.17em;
-    margin: 30px 0 15px;
+    color: #f66;
+    font-weight: bold;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 5px;
 }
 h2:before {
     content: '';
@@ -35,8 +38,7 @@ h2:before {
 blockquote {
     margin: 2em 0;
     padding-left: 30px;
-    border-left: 5px solid #e6e6e6;
-    background: transparent;
+    border-left: 10px solid #e6e6e6;
 }
 p {
     line-height: 1.8em;
