--- a/orangeheartmonokai.css
+++ b/orangeheartmonokai.css
@@ -14,7 +14,7 @@
     'PingFang SC', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-/*段落*/
+/* 段落 */
 #write p {
   font-size: 16px;
   padding-top: 8px;
@@ -24,7 +24,7 @@
   color: black;
 }
 
-/*标题*/
+/* 标题 */
 #write h1,
 #write h2,
 #write h3,
@@ -74,7 +74,7 @@
   font-size: 1rem;
 }
 
-/*列表*/
+/* 列表 */
 #write ul,
 #write ol {
   margin-top: 8px;
@@ -100,7 +100,7 @@
   font-weight: 500;
 }
 
-/*引用*/
+/* 引用 */
 #write blockquote {
   display: block;
   font-size: 0.9em;
@@ -119,7 +119,7 @@
   line-height: 26px;
 }
 
-/*链接*/
+/* 链接 */
 #write a {
   text-decoration: none;
   word-wrap: break-word;
@@ -129,7 +129,7 @@
   border-bottom: 1px solid rgb(239, 112, 96);
 }
 
-/*行内代码*/
+/* 行内代码 */
 #write p code,
 #write li code {
   font-size: 14px;
@@ -143,14 +143,14 @@
   word-break: break-all;
 }
 
-/*图片*/
+/* 图片 */
 #write img {
   display: block;
   margin: 0 auto;
   max-width: 100%;
 }
 
-/*表格*/
+/* 表格 */
 #write table {
   display: table;
   text-align: left;
@@ -210,7 +210,6 @@
 
 /* 代码块主题 */
 /* Based on Sublime Text's Monokai theme */
-
 .cm-s-inner.CodeMirror {
   background: #272822;
   color: #f8f8f2;
@@ -306,7 +305,7 @@
   color: white !important;
 }
 
-/**apply to code fences with plan text**/
+/* apply to code fences with plan text */
 .md-fences {
   background-color: #272822;
   color: #f8f8f2;
